--- a/twitter/Base.lproj/Main.storyboard
+++ b/twitter/Base.lproj/Main.storyboard
@@ -84,12 +84,9 @@
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Logout"/>
                                 <connections>
-                                    <action selector="didTapLogout:" destination="Lbl-k5-U4i" eventType="touchUpInside" id="aaF-Ag-lhf"/>
+                                    <action selector="didTapLogout:" destination="Lbl-k5-U4i" eventType="touchUpInside" id="C6b-Ic-2AC"/>
                                 </connections>
                             </button>
-                            <connections>
-                                <action selector="didTapLogout:" destination="Lbl-k5-U4i" id="Ono-MG-8Vd"/>
-                            </connections>
                         </barButtonItem>
                     </navigationItem>
                 </viewController>
