--- a/twitter/Base.lproj/Main.storyboard
+++ b/twitter/Base.lproj/Main.storyboard
@@ -115,27 +115,6 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="favor-icon" translatesAutoresizingMaskIntoConstraints="NO" id="jhw-VO-bkc">
-                                                    <rect key="frame" x="268" y="119" width="30" height="30"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="30" id="4eP-lO-w8l"/>
-                                                        <constraint firstAttribute="height" constant="30" id="BXU-7U-RtY"/>
-                                                    </constraints>
-                                                </imageView>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="retweet-icon" translatesAutoresizingMaskIntoConstraints="NO" id="MLy-xB-Btw">
-                                                    <rect key="frame" x="174" y="119" width="30" height="30"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="30" id="7Re-rh-mEU"/>
-                                                        <constraint firstAttribute="width" constant="30" id="Pmm-xM-3U9"/>
-                                                    </constraints>
-                                                </imageView>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="reply-icon" translatesAutoresizingMaskIntoConstraints="NO" id="4GI-jF-PVh">
-                                                    <rect key="frame" x="91" y="119" width="30" height="30"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="30" id="Vh5-wv-eqU"/>
-                                                        <constraint firstAttribute="height" constant="30" id="eCq-A7-12v"/>
-                                                    </constraints>
-                                                </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="retweet_count" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B0g-lq-ag5">
                                                     <rect key="frame" x="207" y="129" width="58" height="10"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="8"/>
@@ -154,44 +133,73 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="message-icon" translatesAutoresizingMaskIntoConstraints="NO" id="dt1-X1-UaP">
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9ZB-fH-rCh">
+                                                    <rect key="frame" x="91" y="119" width="30" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="30" id="0iX-eK-CRN"/>
+                                                        <constraint firstAttribute="height" constant="30" id="gtn-qY-kMr"/>
+                                                    </constraints>
+                                                    <state key="normal" title="Button"/>
+                                                    <buttonConfiguration key="configuration" style="plain" image="reply-icon" title=""/>
+                                                </button>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="skj-Fv-clr">
+                                                    <rect key="frame" x="174" y="119" width="30" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="30" id="Llg-Oz-ijP"/>
+                                                        <constraint firstAttribute="height" constant="30" id="ko0-Kb-JYv"/>
+                                                    </constraints>
+                                                    <state key="normal" title="Button"/>
+                                                    <buttonConfiguration key="configuration" style="plain" image="retweet-icon" title=""/>
+                                                </button>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e7D-j5-yMV">
+                                                    <rect key="frame" x="268" y="119" width="30" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="30" id="8xS-bS-4oV"/>
+                                                        <constraint firstAttribute="height" constant="30" id="Z2b-4m-HdD"/>
+                                                    </constraints>
+                                                    <state key="normal" title="Button"/>
+                                                    <buttonConfiguration key="configuration" style="plain" image="favor-icon" title=""/>
+                                                </button>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PT9-Jh-SLE">
                                                     <rect key="frame" x="361" y="119" width="30" height="30"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="30" id="7Fc-kU-Qde"/>
-                                                        <constraint firstAttribute="width" constant="30" id="ocn-KN-Qts"/>
+                                                        <constraint firstAttribute="height" constant="30" id="3RD-ic-MdH"/>
+                                                        <constraint firstAttribute="width" constant="30" id="kvV-IT-XHi"/>
                                                     </constraints>
-                                                </imageView>
+                                                    <state key="normal" title="Button"/>
+                                                    <buttonConfiguration key="configuration" style="plain" image="message-icon" title=""/>
+                                                </button>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="oM9-TP-lUW" firstAttribute="leading" secondItem="HlT-Pv-n09" secondAttribute="trailing" constant="8" id="0Cf-Ih-gnP"/>
-                                                <constraint firstItem="YNr-PI-6bK" firstAttribute="leading" secondItem="4GI-jF-PVh" secondAttribute="trailing" constant="3" id="2y5-Ob-ZWn"/>
-                                                <constraint firstItem="XUn-dJ-GtE" firstAttribute="leading" secondItem="jhw-VO-bkc" secondAttribute="trailing" constant="3" id="5dC-mk-bZd"/>
+                                                <constraint firstItem="skj-Fv-clr" firstAttribute="top" secondItem="e7D-j5-yMV" secondAttribute="top" id="3xq-HP-jMT"/>
+                                                <constraint firstItem="e7D-j5-yMV" firstAttribute="centerY" secondItem="XUn-dJ-GtE" secondAttribute="centerY" id="4fY-hy-rd1"/>
                                                 <constraint firstItem="aEW-8C-SFo" firstAttribute="top" secondItem="HlT-Pv-n09" secondAttribute="top" id="7Q8-qr-kLM"/>
-                                                <constraint firstItem="YNr-PI-6bK" firstAttribute="centerY" secondItem="4GI-jF-PVh" secondAttribute="centerY" id="DSq-om-rVz"/>
+                                                <constraint firstItem="9ZB-fH-rCh" firstAttribute="leading" secondItem="dXh-w4-yji" secondAttribute="leading" id="7tn-HG-o38"/>
+                                                <constraint firstItem="B0g-lq-ag5" firstAttribute="leading" secondItem="skj-Fv-clr" secondAttribute="trailing" constant="3" id="AlV-xR-Etd"/>
                                                 <constraint firstItem="dXh-w4-yji" firstAttribute="top" secondItem="oM9-TP-lUW" secondAttribute="bottom" constant="10" id="Dkz-EK-IkC"/>
-                                                <constraint firstItem="B0g-lq-ag5" firstAttribute="centerY" secondItem="MLy-xB-Btw" secondAttribute="centerY" id="Fr2-07-PZr"/>
                                                 <constraint firstItem="dXh-w4-yji" firstAttribute="leading" secondItem="oM9-TP-lUW" secondAttribute="leading" id="Hrd-w8-7I7"/>
                                                 <constraint firstItem="HlT-Pv-n09" firstAttribute="top" secondItem="qe3-Zn-EDj" secondAttribute="top" constant="8" id="IyF-cc-TcN"/>
-                                                <constraint firstItem="B0g-lq-ag5" firstAttribute="leading" secondItem="MLy-xB-Btw" secondAttribute="trailing" constant="3" id="NdN-Em-CWg"/>
+                                                <constraint firstItem="skj-Fv-clr" firstAttribute="leading" secondItem="YNr-PI-6bK" secondAttribute="trailing" constant="3" id="L8G-VX-CKz"/>
                                                 <constraint firstItem="oM9-TP-lUW" firstAttribute="leading" secondItem="HlT-Pv-n09" secondAttribute="trailing" constant="8" id="OJ3-i1-e1w"/>
-                                                <constraint firstItem="MLy-xB-Btw" firstAttribute="leading" secondItem="YNr-PI-6bK" secondAttribute="trailing" constant="3" id="POe-hP-L68"/>
-                                                <constraint firstItem="4GI-jF-PVh" firstAttribute="leading" secondItem="dXh-w4-yji" secondAttribute="leading" id="RS5-uR-zik"/>
+                                                <constraint firstItem="9ZB-fH-rCh" firstAttribute="top" secondItem="skj-Fv-clr" secondAttribute="top" id="PTY-LL-LPY"/>
+                                                <constraint firstItem="9ZB-fH-rCh" firstAttribute="centerY" secondItem="YNr-PI-6bK" secondAttribute="centerY" id="ULf-y0-K8N"/>
                                                 <constraint firstItem="oM9-TP-lUW" firstAttribute="top" secondItem="HlT-Pv-n09" secondAttribute="top" id="V8o-0P-F5I"/>
-                                                <constraint firstItem="MLy-xB-Btw" firstAttribute="top" secondItem="4GI-jF-PVh" secondAttribute="top" id="X6c-7o-h8S"/>
                                                 <constraint firstItem="HlT-Pv-n09" firstAttribute="leading" secondItem="qe3-Zn-EDj" secondAttribute="leading" constant="8" id="aV0-ac-zVC"/>
                                                 <constraint firstItem="aEW-8C-SFo" firstAttribute="leading" secondItem="aKh-7o-dRl" secondAttribute="trailing" constant="8" id="aiv-Nw-A7n"/>
-                                                <constraint firstItem="jhw-VO-bkc" firstAttribute="leading" secondItem="B0g-lq-ag5" secondAttribute="trailing" constant="3" id="do1-ac-qpb"/>
-                                                <constraint firstItem="dt1-X1-UaP" firstAttribute="leading" secondItem="XUn-dJ-GtE" secondAttribute="trailing" constant="3" id="eXg-t3-6yk"/>
-                                                <constraint firstItem="XUn-dJ-GtE" firstAttribute="centerY" secondItem="jhw-VO-bkc" secondAttribute="centerY" id="fg0-cE-eXS"/>
+                                                <constraint firstAttribute="bottom" secondItem="9ZB-fH-rCh" secondAttribute="bottom" constant="1" id="caa-xy-6Ab"/>
+                                                <constraint firstItem="skj-Fv-clr" firstAttribute="centerY" secondItem="B0g-lq-ag5" secondAttribute="centerY" id="eA9-Jf-HIQ"/>
+                                                <constraint firstItem="XUn-dJ-GtE" firstAttribute="leading" secondItem="e7D-j5-yMV" secondAttribute="trailing" constant="3" id="eSk-2S-i1E"/>
                                                 <constraint firstItem="aKh-7o-dRl" firstAttribute="leading" secondItem="oM9-TP-lUW" secondAttribute="trailing" constant="8" id="frB-FR-g4l"/>
-                                                <constraint firstItem="4GI-jF-PVh" firstAttribute="top" relation="greaterThanOrEqual" secondItem="dXh-w4-yji" secondAttribute="bottom" id="knj-DQ-gAW"/>
+                                                <constraint firstItem="YNr-PI-6bK" firstAttribute="leading" secondItem="9ZB-fH-rCh" secondAttribute="trailing" constant="3" id="kpG-Ht-Vyc"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="dXh-w4-yji" secondAttribute="trailing" constant="8" id="n1O-eY-o7Z"/>
                                                 <constraint firstItem="oM9-TP-lUW" firstAttribute="top" secondItem="HlT-Pv-n09" secondAttribute="top" id="pvX-B5-heX"/>
-                                                <constraint firstItem="jhw-VO-bkc" firstAttribute="top" secondItem="MLy-xB-Btw" secondAttribute="top" id="tdl-Wz-tT5"/>
-                                                <constraint firstAttribute="bottom" secondItem="4GI-jF-PVh" secondAttribute="bottom" constant="1" id="tod-Qy-9fq"/>
+                                                <constraint firstItem="e7D-j5-yMV" firstAttribute="leading" secondItem="B0g-lq-ag5" secondAttribute="trailing" constant="3" id="qB1-wR-aQY"/>
+                                                <constraint firstItem="PT9-Jh-SLE" firstAttribute="leading" secondItem="XUn-dJ-GtE" secondAttribute="trailing" constant="3" id="r7B-V5-Vff"/>
+                                                <constraint firstItem="e7D-j5-yMV" firstAttribute="top" secondItem="PT9-Jh-SLE" secondAttribute="top" id="tiP-4Z-A1k"/>
                                                 <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="HlT-Pv-n09" secondAttribute="bottom" constant="88" id="uCo-0p-enL"/>
+                                                <constraint firstItem="9ZB-fH-rCh" firstAttribute="top" relation="greaterThanOrEqual" secondItem="dXh-w4-yji" secondAttribute="bottom" id="uUf-6h-y6h"/>
                                                 <constraint firstItem="aKh-7o-dRl" firstAttribute="top" secondItem="HlT-Pv-n09" secondAttribute="top" id="xQh-MR-Mkx"/>
-                                                <constraint firstItem="dt1-X1-UaP" firstAttribute="top" secondItem="jhw-VO-bkc" secondAttribute="top" id="xSo-op-Dhb"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
